# pdc-rebootstrap

./: .gitignore  CMakeLists.txt  README.md  instalar.sh
boot-t1/: CMakeLists.txt  toolchain.txt.in
boot-t1/runtime/c/: runtime.c
boot-t1/snapshot/bepd/: algoritmos.c  builtins.c  builtinsImpl.c  intrinsics.c
boot-t1/snapshot/bepd/datos/: caja.c  conjunto.c  diccionario.c  pila.c  resultado.c
boot-t1/snapshot/bepd/datos/diccionario/: alist.c  hashmap.c  interfaz.c
boot-t1/snapshot/bepd/utilidades/: arreglo.c  iteración.c  texto.c
boot-t1/snapshot/bepd/utilidades/texto/: ascii.c
boot-t1/snapshot/bepd/x/: adhoc.c  algebraico.c  cli.c  control.c  datos.c  datos2.c  entorno.c  enum.c  json.c  lazy.c  logs.c  puerto.c  sexpr.c  utf8.c
boot-t1/snapshot/bepd/x/puerto/: conPosición.c  deArchivo.c
boot-t1/snapshot/bepd/x/sistemaDeArchivos/: archivo.c  rutas.c
boot-t1/snapshot/pdc/: abstraer.c  ast.c  capturas.c  catamorfismos.c  combinadores.c  compilador.c  cst.c  dependencias.c  info.c  inicio.c  módulos.c  nombres.c  parser.c  subproceso.c  tabla.c  tokenizador.c  tokens.c  validación.c
boot-t1/snapshot/pdc/backend/: c.c
boot-t1/snapshot/pdc/backend/c/: ir.c  lowerer.c
